--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^1.0.1
   http: ^0.13.3
+  elegant_notification: ^1.9.1
 
 dev_dependencies:
   flutter_test:
