--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   elegant_notification: ^1.9.1
   # auth0_flutter: ^1.0.0
 
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,12 +52,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: "^0.10.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/Cube_Prolo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -87,3 +93,9 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencie
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Cube_Prolo.png"
+  min_sdk_android: 21
